// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Posts /> should render component with uiState prop which value is "loading" 1`] = `
<Fragment>
  <Loading />
</Fragment>
`;

exports[`<Posts /> should render initial page 1`] = `
<Fragment>
  <Items
    handleClick={[Function]}
    posts={Array []}
  />
</Fragment>
`;
